--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -217,6 +217,7 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\omoss.cshtml" />
+    <Content Include="Views\Home\Kontakt.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
