--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -222,6 +222,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Images\" />
     <Folder Include="Views\omoss\" />
   </ItemGroup>
   <ItemGroup>
