--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -174,6 +174,8 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Csskod.css" />
+    <Content Include="Content\Images\AnderssonAnnette.jpg" />
+    <Content Include="Content\Images\Anna.jpg" />
     <Content Include="Content\Images\arlen 25 - 2.jpg" />
     <Content Include="Content\Images\Blaslampan 2 - 1.jpg" />
     <Content Include="Content\Images\Blaslampan 2 - 3.jpg" />
@@ -184,6 +186,11 @@
     <Content Include="Content\Images\Liljan 9 - 1.jpg" />
     <Content Include="Content\Images\Malgen-Gigeln - 2.jpg" />
     <Content Include="Content\Images\omossbild.jpg" />
+    <Content Include="Content\Images\Ottosson-Carina.jpg" />
+    <Content Include="Content\Images\RunellIrene.jpg" />
+    <Content Include="Content\Images\Stieg.jpg" />
+    <Content Include="Content\Images\Thor Mari.jpg" />
+    <Content Include="Content\Images\TungfeltLena02.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
