Fix med headern

--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -179,6 +179,7 @@
     <Content Include="Content\Images\Blaslampan 2 - 3.jpg" />
     <Content Include="Content\Images\Brandstationen 6 - 3.jpg" />
     <Content Include="Content\Images\Fetknoppen 2 - 2.jpg" />
+    <Content Include="Content\Images\headerje.png" />
     <Content Include="Content\Images\Jarnvagsgatan 26 A.jpg" />
     <Content Include="Content\Images\Krakan 9 - 1.jpg" />
     <Content Include="Content\Images\Liljan 9 - 1.jpg" />
