dom som inte jobbar på kontoret

--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -174,24 +174,35 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Csskod.css" />
+    <Content Include="Content\Images\Akerstrandorjan.jpg" />
     <Content Include="Content\Images\AnderssonAnnette.jpg" />
     <Content Include="Content\Images\Anna.jpg" />
     <Content Include="Content\Images\arlen 25 - 2.jpg" />
+    <Content Include="Content\Images\BergTony.jpg" />
     <Content Include="Content\Images\Blaslampan 2 - 1.jpg" />
     <Content Include="Content\Images\Blaslampan 2 - 3.jpg" />
     <Content Include="Content\Images\Brandstationen 6 - 3.jpg" />
+    <Content Include="Content\Images\ErikssonPeder.jpg" />
     <Content Include="Content\Images\Fetknoppen 2 - 2.jpg" />
+    <Content Include="Content\Images\Gustafsson-Jan-Ake.jpg" />
     <Content Include="Content\Images\headerje.png" />
     <Content Include="Content\Images\Jarnvagsgatan 26 A.jpg" />
+    <Content Include="Content\Images\Johansson-Patrik.jpg" />
     <Content Include="Content\Images\Krakan 9 - 1.jpg" />
+    <Content Include="Content\Images\LarsenPeter.jpg" />
+    <Content Include="Content\Images\LiljaGabriel.jpg" />
     <Content Include="Content\Images\Liljan 9 - 1.jpg" />
     <Content Include="Content\Images\Malgen-Gigeln - 2.jpg" />
     <Content Include="Content\Images\omossbild.jpg" />
     <Content Include="Content\Images\Ottosson-Carina.jpg" />
+    <Content Include="Content\Images\RunellHans.jpg" />
     <Content Include="Content\Images\RunellIrene.jpg" />
+    <Content Include="Content\Images\StenArnsheml.png" />
     <Content Include="Content\Images\Stieg.jpg" />
+    <Content Include="Content\Images\StrandbergMikael.jpg" />
     <Content Include="Content\Images\Thor Mari.jpg" />
     <Content Include="Content\Images\TungfeltLena02.jpg" />
+    <Content Include="Content\Images\WibergBenny.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
