frågor och svar

--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -265,6 +265,7 @@
     <Content Include="Views\Home\Kontakt.cshtml" />
     <Content Include="Views\Home\Nyheter.cshtml" />
     <Content Include="Views\Home\Felanmalan.cshtml" />
+    <Content Include="Views\Home\FragorOchSvar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
