--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -269,6 +269,7 @@
     <Content Include="Views\Home\Varafastigheter.cshtml" />
     <Content Include="Views\Home\Intresseanmalan.cshtml" />
     <Content Include="Views\Home\seriorboende.cshtml" />
+    <Content Include="Views\Home\studentboende.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
