--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -209,6 +209,7 @@
     <Content Include="Content\Images\Stieg.jpg" />
     <Content Include="Content\Images\StrandbergMikael.jpg" />
     <Content Include="Content\Images\Thor Mari.jpg" />
+    <Content Include="Content\Images\transparent.png" />
     <Content Include="Content\Images\TungfeltLena02.jpg" />
     <Content Include="Content\Images\tärnvägen.PNG" />
     <Content Include="Content\Images\WibergBenny.jpg" />
