kontakt: tagit bort kontaktformulär, lagt till de personer som skulle in, tagit bort gabriel, lagt till bild för de "anonyma"

--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -180,6 +180,8 @@
     <Content Include="Content\Images\Akerstrandorjan.jpg" />
     <Content Include="Content\Images\AnderssonAnnette.jpg" />
     <Content Include="Content\Images\Anna.jpg" />
+    <Content Include="Content\Images\anonym.jpg" />
+    <Content Include="Content\Images\anonym2.jpg" />
     <Content Include="Content\Images\arlen 25 - 2.jpg" />
     <Content Include="Content\Images\BackgrundSunnanlid.jpg" />
     <Content Include="Content\Images\BergTony.jpg" />
