--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -211,6 +211,7 @@
     <Content Include="Content\Images\RunellIrene.jpg" />
     <Content Include="Content\Images\salsmästargatan.PNG" />
     <Content Include="Content\Images\Senior.jpeg" />
+    <Content Include="Content\Images\sommar.png" />
     <Content Include="Content\Images\StenArnsheml.png" />
     <Content Include="Content\Images\Stieg.jpg" />
     <Content Include="Content\Images\StrandbergMikael.jpg" />
