--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -195,6 +195,7 @@
     <Content Include="Content\Images\ErikssonPeder.jpg" />
     <Content Include="Content\Images\Fetknoppen 2 - 2.jpg" />
     <Content Include="Content\Images\Gustafsson-Jan-Ake.jpg" />
+    <Content Include="Content\Images\Header2.png" />
     <Content Include="Content\Images\headerje.png" />
     <Content Include="Content\Images\headerje1.png" />
     <Content Include="Content\Images\Jarnvagsgatan 26 A.jpg" />
