--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -182,6 +182,7 @@
     <Content Include="Content\Images\Akerstrandorjan.jpg" />
     <Content Include="Content\Images\AnderssonAnnette.jpg" />
     <Content Include="Content\Images\Anna.jpg" />
+    <Content Include="Content\Images\anonym-man.jpg" />
     <Content Include="Content\Images\anonym.jpg" />
     <Content Include="Content\Images\anonym2.jpg" />
     <Content Include="Content\Images\arlen 25 - 2.jpg" />
