fixat med om oss

--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -207,6 +207,7 @@
     <Content Include="Content\Images\LarsenPeter.jpg" />
     <Content Include="Content\Images\LiljaGabriel.jpg" />
     <Content Include="Content\Images\Liljan 9 - 1.jpg" />
+    <Content Include="Content\Images\logo-black-text-height-240px-2x.png" />
     <Content Include="Content\Images\Malgen-Gigeln - 2.jpg" />
     <Content Include="Content\Images\omossbild.jpg" />
     <Content Include="Content\Images\Ottosson-Carina.jpg" />
