--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -211,6 +211,7 @@
     <Content Include="Content\Images\Malgen-Gigeln - 2.jpg" />
     <Content Include="Content\Images\omossbild.jpg" />
     <Content Include="Content\Images\Ottosson-Carina.jpg" />
+    <Content Include="Content\Images\planlösning.jpg" />
     <Content Include="Content\Images\RunellHans.jpg" />
     <Content Include="Content\Images\RunellIrene.jpg" />
     <Content Include="Content\Images\salsmästargatan.PNG" />
