--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -177,6 +177,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Csskod.css" />
+    <Content Include="Content\Header2.png" />
     <Content Include="Content\Images\012.tif" />
     <Content Include="Content\Images\026.tif" />
     <Content Include="Content\Images\Akerstrandorjan.jpg" />
@@ -197,6 +198,7 @@
     <Content Include="Content\Images\Fetknoppen 2 - 2.jpg" />
     <Content Include="Content\Images\Gustafsson-Jan-Ake.jpg" />
     <Content Include="Content\Images\Header2.png" />
+    <Content Include="Content\Images\Header3.png" />
     <Content Include="Content\Images\headerje.png" />
     <Content Include="Content\Images\headerje1.png" />
     <Content Include="Content\Images\HeaderSmal.png" />
