--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -290,6 +290,7 @@
     <Content Include="Views\Home\studentboende.cshtml" />
     <Content Include="Views\Home\Intresseanmalan2.cshtml" />
     <Content Include="Views\Home\InfoObjekt.cshtml" />
+    <Content Include="Views\Home\VarafastigheterAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
