--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -291,6 +291,7 @@
     <Content Include="Views\Home\Intresseanmalan2.cshtml" />
     <Content Include="Views\Home\InfoObjekt.cshtml" />
     <Content Include="Views\Home\VarafastigheterAdmin.cshtml" />
+    <Content Include="Views\Home\KontaktAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
