lagt till redigeringsknappar på Omoss-Admin. Har lagt in en bild på hur en redigeringsmeny ser utt. denna kommer bytas ut till någon bättre

--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -214,6 +214,7 @@
     <Content Include="Content\Images\omossbild.jpg" />
     <Content Include="Content\Images\Ottosson-Carina.jpg" />
     <Content Include="Content\Images\planlösning.jpg" />
+    <Content Include="Content\Images\publish-wordpress-page.jpg" />
     <Content Include="Content\Images\RunellHans.jpg" />
     <Content Include="Content\Images\RunellIrene.jpg" />
     <Content Include="Content\Images\salsmästargatan.PNG" />
