--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -296,6 +296,7 @@
     <Content Include="Views\Home\omossAdmin.cshtml" />
     <Content Include="Views\Home\FragorOchSvarAdmin.cshtml" />
     <Content Include="Views\Home\IntresseanmalanAdmin.cshtml" />
+    <Content Include="Views\Home\FelanmalanAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
