--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -298,6 +298,7 @@
     <Content Include="Views\Home\IntresseanmalanAdmin.cshtml" />
     <Content Include="Views\Home\FelanmalanAdmin.cshtml" />
     <Content Include="Views\Home\LedigaObjektAdmin.cshtml" />
+    <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
