--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -215,6 +215,7 @@
     <Content Include="Content\Images\Ottosson-Carina.jpg" />
     <Content Include="Content\Images\planlösning.jpg" />
     <Content Include="Content\Images\publish-wordpress-page.jpg" />
+    <Content Include="Content\Images\redigeranyhet.jpg" />
     <Content Include="Content\Images\RunellHans.jpg" />
     <Content Include="Content\Images\RunellIrene.jpg" />
     <Content Include="Content\Images\salsmästargatan.PNG" />
