--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -302,6 +302,7 @@
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Views\Home\NyheterAdmin.cshtml" />
     <Content Include="Views\Home\seriorboendeAdmin.cshtml" />
+    <Content Include="Views\Home\studentboendeAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
