--- a/design/design/design.csproj
+++ b/design/design/design.csproj
@@ -203,6 +203,7 @@
     <Content Include="Content\Images\headerje.png" />
     <Content Include="Content\Images\headerje1.png" />
     <Content Include="Content\Images\HeaderSmal.png" />
+    <Content Include="Content\Images\info.jpg" />
     <Content Include="Content\Images\Jarnvagsgatan 26 A.jpg" />
     <Content Include="Content\Images\JEbygg logga.png" />
     <Content Include="Content\Images\Johansson-Patrik.jpg" />
